# transazioni_finanziarie

./: CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  Transazione.cpp  Transazione.h  main.cpp
test/lib/: CMakeLists.txt  runAllTests.cpp  test_contocorrente.cpp  test_transazione.cpp
